// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`KogitoEmptyState component tests Info test 1`] = `
<KogitoEmptyState
  body="This process has no related sub processes"
  ouiaId="empty-state-ouia-id"
  title="No child process instances"
  type={3}
>
  <Bullseye
    data-ouia-component-id="empty-state-ouia-id"
    data-ouia-component-type="kogito-empty-state"
    data-ouia-safe={true}
  >
    <div
      className="pf-l-bullseye"
      data-ouia-component-id="empty-state-ouia-id"
      data-ouia-component-type="kogito-empty-state"
      data-ouia-safe={true}
    >
      <EmptyState
        variant="full"
      >
        <div
          className="pf-c-empty-state"
        >
          <div
            className="pf-c-empty-state__content"
          >
            <EmptyStateIcon
              color="var(--pf-global--info-color--100)"
              icon={[Function]}
            >
              <InfoCircleIcon
                aria-hidden="true"
                className="pf-c-empty-state__icon"
                color="var(--pf-global--info-color--100)"
              >
                <MockedComponent />
              </InfoCircleIcon>
            </EmptyStateIcon>
            <Title
              headingLevel="h5"
              size="lg"
            >
              <h5
                className="pf-c-title pf-m-lg"
                data-ouia-component-id="OUIA-Generated-Title-3"
                data-ouia-component-type="PF4/Title"
                data-ouia-safe={true}
              >
                No child process instances
              </h5>
            </Title>
            <EmptyStateBody>
              <div
                className="pf-c-empty-state__body"
              >
                This process has no related sub processes
              </div>
            </EmptyStateBody>
          </div>
        </div>
      </EmptyState>
    </div>
  </Bullseye>
</KogitoEmptyState>
`;

exports[`KogitoEmptyState component tests Refresh test 1`] = `
<KogitoEmptyState
  body="This process has no related sub processes"
  onClick={[MockFunction]}
  ouiaId="empty-state-ouia-id"
  title="No child process instances"
  type={1}
>
  <Bullseye
    data-ouia-component-id="empty-state-ouia-id"
    data-ouia-component-type="kogito-empty-state"
    data-ouia-safe={true}
  >
    <div
      className="pf-l-bullseye"
      data-ouia-component-id="empty-state-ouia-id"
      data-ouia-component-type="kogito-empty-state"
      data-ouia-safe={true}
    >
      <EmptyState
        variant="full"
      >
        <div
          className="pf-c-empty-state"
        >
          <div
            className="pf-c-empty-state__content"
          >
            <EmptyStateIcon
              color="var(--pf-global--warning-color--100)"
              icon={[Function]}
            >
              <ExclamationTriangleIcon
                aria-hidden="true"
                className="pf-c-empty-state__icon"
                color="var(--pf-global--warning-color--100)"
              >
                <MockedComponent />
              </ExclamationTriangleIcon>
            </EmptyStateIcon>
            <Title
              headingLevel="h5"
              size="lg"
            >
              <h5
                className="pf-c-title pf-m-lg"
                data-ouia-component-id="OUIA-Generated-Title-4"
                data-ouia-component-type="PF4/Title"
                data-ouia-safe={true}
              >
                No child process instances
              </h5>
            </Title>
            <EmptyStateBody>
              <div
                className="pf-c-empty-state__body"
              >
                This process has no related sub processes
              </div>
            </EmptyStateBody>
            <Button
              onClick={[MockFunction]}
              variant="primary"
            >
              <ButtonBase
                innerRef={null}
                onClick={[MockFunction]}
                variant="primary"
              >
                <button
                  aria-disabled={false}
                  aria-label={null}
                  className="pf-c-button pf-m-primary"
                  data-ouia-component-id="OUIA-Generated-Button-primary-1"
                  data-ouia-component-type="PF4/Button"
                  data-ouia-safe={true}
                  disabled={false}
                  onClick={[MockFunction]}
                  role={null}
                  type="button"
                >
                  Refresh
                </button>
              </ButtonBase>
            </Button>
          </div>
        </div>
      </EmptyState>
    </div>
  </Bullseye>
</KogitoEmptyState>
`;

exports[`KogitoEmptyState component tests Reset test 1`] = `
<KogitoEmptyState
  body="This process has no related sub processes"
  onClick={[MockFunction]}
  ouiaId="empty-state-ouia-id"
  title="No child process instances"
  type={2}
>
  <Bullseye
    data-ouia-component-id="empty-state-ouia-id"
    data-ouia-component-type="kogito-empty-state"
    data-ouia-safe={true}
  >
    <div
      className="pf-l-bullseye"
      data-ouia-component-id="empty-state-ouia-id"
      data-ouia-component-type="kogito-empty-state"
      data-ouia-safe={true}
    >
      <EmptyState
        variant="full"
      >
        <div
          className="pf-c-empty-state"
        >
          <div
            className="pf-c-empty-state__content"
          >
            <EmptyStateIcon
              color="var(--pf-global--warning-color--100)"
              icon={[Function]}
            >
              <ExclamationTriangleIcon
                aria-hidden="true"
                className="pf-c-empty-state__icon"
                color="var(--pf-global--warning-color--100)"
              >
                <MockedComponent />
              </ExclamationTriangleIcon>
            </EmptyStateIcon>
            <Title
              headingLevel="h5"
              size="lg"
            >
              <h5
                className="pf-c-title pf-m-lg"
                data-ouia-component-id="OUIA-Generated-Title-2"
                data-ouia-component-type="PF4/Title"
                data-ouia-safe={true}
              >
                No child process instances
              </h5>
            </Title>
            <EmptyStateBody>
              <div
                className="pf-c-empty-state__body"
              >
                This process has no related sub processes
              </div>
            </EmptyStateBody>
            <Button
              onClick={[MockFunction]}
              variant="link"
            >
              <ButtonBase
                innerRef={null}
                onClick={[MockFunction]}
                variant="link"
              >
                <button
                  aria-disabled={false}
                  aria-label={null}
                  className="pf-c-button pf-m-link"
                  data-ouia-component-id="OUIA-Generated-Button-link-1"
                  data-ouia-component-type="PF4/Button"
                  data-ouia-safe={true}
                  disabled={false}
                  onClick={[MockFunction]}
                  role={null}
                  type="button"
                >
                  Reset to default
                </button>
              </ButtonBase>
            </Button>
          </div>
        </div>
      </EmptyState>
    </div>
  </Bullseye>
</KogitoEmptyState>
`;

exports[`KogitoEmptyState component tests Search test 1`] = `
<KogitoEmptyState
  body="This process has no related sub processes"
  ouiaId="empty-state-ouia-id"
  title="No child process instances"
  type={0}
>
  <Bullseye
    data-ouia-component-id="empty-state-ouia-id"
    data-ouia-component-type="kogito-empty-state"
    data-ouia-safe={true}
  >
    <div
      className="pf-l-bullseye"
      data-ouia-component-id="empty-state-ouia-id"
      data-ouia-component-type="kogito-empty-state"
      data-ouia-safe={true}
    >
      <EmptyState
        variant="full"
      >
        <div
          className="pf-c-empty-state"
        >
          <div
            className="pf-c-empty-state__content"
          >
            <EmptyStateIcon
              icon={[Function]}
            >
              <SearchIcon
                aria-hidden="true"
                className="pf-c-empty-state__icon"
              >
                <MockedComponent />
              </SearchIcon>
            </EmptyStateIcon>
            <Title
              headingLevel="h5"
              size="lg"
            >
              <h5
                className="pf-c-title pf-m-lg"
                data-ouia-component-id="OUIA-Generated-Title-1"
                data-ouia-component-type="PF4/Title"
                data-ouia-safe={true}
              >
                No child process instances
              </h5>
            </Title>
            <EmptyStateBody>
              <div
                className="pf-c-empty-state__body"
              >
                This process has no related sub processes
              </div>
            </EmptyStateBody>
          </div>
        </div>
      </EmptyState>
    </div>
  </Bullseye>
</KogitoEmptyState>
`;
